# agent_roi

./: .vercelignore  LICENSE  README.md  pyproject.toml  pytest.ini
dashboard/: index.html  package-lock.json  start.sh  vite.config.js
dashboard/public/: summary.json  summary_humaneval.json
dashboard/src/: App.jsx  Generalization.jsx  index.css
demo/: reeval.py  rerun_failed.sh  reset_bugs.py  run_all.sh  run_humaneval.sh  run_new.sh  summarize.py
demo/humaneval/: reset.py
demo/memory/: auth.json  calc.json  humaneval_t1a.json  humaneval_t1b.json  humaneval_t1c.json  humaneval_t2.json  humaneval_t3.json
demo/results/: auth_run_pytest_assertione_run001_cbf21a_events.jsonl  calc_run_pytest_assertione_run001_164308_events.jsonl  calc_run_pytest_assertione_run001_164308_roi_report.json  calc_run_pytest_assertione_run001_91ca46_events.jsonl  calc_run_pytest_assertione_run001_91ca46_roi_report.json
demo/results_humaneval/: summary.json  summary_humaneval.json  t1_op_fi_pytest_assertione_run001_6c9230_roi_report.json  t1_op_fi_pytest_assertione_run001_9afa97_roi_report.json  t1_op_ge_pytest_assertione_run001_29d1bc_roi_report.json  t1_op_ge_pytest_assertione_run001_a14523_events.jsonl  t1_op_ge_pytest_assertione_run001_a14523_roi_report.json  t1_op_re_pytest_assertione_run001_5badf4_roi_report.json  t1_op_re_pytest_zerodivisi_run017_113cc0_events.jsonl  t1_op_re_pytest_zerodivisi_run017_113cc0_roi_report.json  t1_op_so_pytest_assertione_run001_17a70a_roi_report.json  (+73 more)
src/agentroi.egg-info/: PKG-INFO  (+4 more)
tests/: conftest.py  test_integration.py  test_unit.py
(+62 files in other folders)
