[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentroi"
version = "0.1.0"
description = "Self-improving agent-swarm profiler with ROI optimization loop"
requires-python = ">=3.11"
dependencies = [
    "claude-code-sdk>=0.0.10",
    "anthropic>=0.40.0",
    "anyio>=4.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "aiofiles>=23.0.0",
]

[project.scripts]
agentroi = "agentroi.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
